// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`jsonToPost\` converts JSON based post metadata into a post 1`] = `
Object {
  "category": "technology",
  "coverImageAlt": "CoverImageAlt",
  "coverImageUrl": "5.jpg",
  "coverImg": Object {
    "backgroundColor": "transparent",
    "height": 369,
    "images": Object {
      "fallback": Object {
        "sizes": "(min-width: 253px) 253px, 100vw",
        "src": "/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg",
        "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/714de/kali-15.jpg 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/67156/kali-15.jpg 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/2be7d/kali-15.jpg 506w",
      },
      "sources": Array [
        Object {
          "sizes": "(min-width: 253px) 253px, 100vw",
          "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/a74e4/kali-15.avif 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/8e2c5/kali-15.avif 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/f0967/kali-15.avif 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5aef2/kali-15.avif 506w",
          "type": "image/avif",
        },
        Object {
          "sizes": "(min-width: 253px) 253px, 100vw",
          "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/66664/kali-15.webp 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/2139e/kali-15.webp 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/529a1/kali-15.webp 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5b7a8/kali-15.webp 506w",
          "type": "image/webp",
        },
      ],
    },
    "layout": "constrained",
    "placeholder": Object {
      "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAdABQDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAMEAgX/xAAXAQADAQAAAAAAAAAAAAAAAAABAgME/9oADAMBAAIQAxAAAAFFSnCiDQuqS7mupCUpA3//xAAcEAEAAgMAAwAAAAAAAAAAAAABAAIDEBESISL/2gAIAQEAAQUCpjbRxDPo1f1Lh5YLMupVsurdZzh//8QAHBEAAgEFAQAAAAAAAAAAAAAAAAECERITIVFh/9oACAEDAQE/AZTpIT9Meyx9P//EABkRAAMAAwAAAAAAAAAAAAAAAAABEQISQf/aAAgBAgEBPwFYtqlNuFP/xAAfEAACAQQCAwAAAAAAAAAAAAAAARECISIyEDFRYXH/2gAIAQEABj8Cl2XgxxNRJKfhKog2SOz0XJL1cf/EABsQAQADAQEBAQAAAAAAAAAAAAEAESExQVFx/9oACAEBAAE/IW+FBN68lYNk9IDvH5i4EiaPfPyIso+MfvQ5cEHLXVx23sDaNMGSOQoT/9oADAMBAAIAAwAAABCX/n3/xAAYEQEBAQEBAAAAAAAAAAAAAAABEQAhsf/aAAgBAwEBPxB43JDFpvbhi+N//8QAFxEAAwEAAAAAAAAAAAAAAAAAAAERUf/aAAgBAgEBPxCAMQUKCcP/xAAcEAEAAwEAAwEAAAAAAAAAAAABABEhMVFhoUH/2gAIAQEAAT8Qau/gJb5vxL54GONcuAL+RoR+y45i+geJQIyylhej1ePcjJUPZEQUOFPK0+xv0NmqtZzmzXw45E3uWQTHBGgghOJf2f/Z",
    },
    "width": 253,
  },
  "dateModified": 2021-01-09T00:00:00.000Z,
  "datePublished": 2021-01-06T00:00:00.000Z,
  "description": "this is a post description",
  "excerpt": "This is a post excerpt, used for testing with Cypress. We'll grab the text by searching for it on the DOM. This should be the final sentence…",
  "pathName": "/lorem-ipsum",
  "relatedPosts": undefined,
  "route": "/lorem-ipsum",
  "slug": "/lorem-ipsum",
  "tags": Array [
    "programming",
    "javascript",
  ],
  "timeToRead": 3,
  "title": "Lorem Ipsum",
  "url": "https://zito.fyi/lorem-ipsum",
}
`;

exports[`\`jsonToPost\` converts JSON based post metadata into a post 2`] = `
Object {
  "category": "technology",
  "coverImageAlt": "CoverImageAlt",
  "coverImageUrl": "5.jpg",
  "coverImg": Object {
    "backgroundColor": "transparent",
    "height": 369,
    "images": Object {
      "fallback": Object {
        "sizes": "(min-width: 253px) 253px, 100vw",
        "src": "/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg",
        "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/714de/kali-15.jpg 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/67156/kali-15.jpg 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/2be7d/kali-15.jpg 506w",
      },
      "sources": Array [
        Object {
          "sizes": "(min-width: 253px) 253px, 100vw",
          "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/a74e4/kali-15.avif 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/8e2c5/kali-15.avif 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/f0967/kali-15.avif 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5aef2/kali-15.avif 506w",
          "type": "image/avif",
        },
        Object {
          "sizes": "(min-width: 253px) 253px, 100vw",
          "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/66664/kali-15.webp 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/2139e/kali-15.webp 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/529a1/kali-15.webp 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5b7a8/kali-15.webp 506w",
          "type": "image/webp",
        },
      ],
    },
    "layout": "constrained",
    "placeholder": Object {
      "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAdABQDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAMEAgX/xAAXAQADAQAAAAAAAAAAAAAAAAABAgME/9oADAMBAAIQAxAAAAFFSnCiDQuqS7mupCUpA3//xAAcEAEAAgMAAwAAAAAAAAAAAAABAAIDEBESISL/2gAIAQEAAQUCpjbRxDPo1f1Lh5YLMupVsurdZzh//8QAHBEAAgEFAQAAAAAAAAAAAAAAAAECERITIVFh/9oACAEDAQE/AZTpIT9Meyx9P//EABkRAAMAAwAAAAAAAAAAAAAAAAABEQISQf/aAAgBAgEBPwFYtqlNuFP/xAAfEAACAQQCAwAAAAAAAAAAAAAAARECISIyEDFRYXH/2gAIAQEABj8Cl2XgxxNRJKfhKog2SOz0XJL1cf/EABsQAQADAQEBAQAAAAAAAAAAAAEAESExQVFx/9oACAEBAAE/IW+FBN68lYNk9IDvH5i4EiaPfPyIso+MfvQ5cEHLXVx23sDaNMGSOQoT/9oADAMBAAIAAwAAABCX/n3/xAAYEQEBAQEBAAAAAAAAAAAAAAABEQAhsf/aAAgBAwEBPxB43JDFpvbhi+N//8QAFxEAAwEAAAAAAAAAAAAAAAAAAAERUf/aAAgBAgEBPxCAMQUKCcP/xAAcEAEAAwEAAwEAAAAAAAAAAAABABEhMVFhoUH/2gAIAQEAAT8Qau/gJb5vxL54GONcuAL+RoR+y45i+geJQIyylhej1ePcjJUPZEQUOFPK0+xv0NmqtZzmzXw45E3uWQTHBGgghOJf2f/Z",
    },
    "width": 253,
  },
  "dateModified": 2021-01-09T00:00:00.000Z,
  "datePublished": 2021-01-06T00:00:00.000Z,
  "description": "this is a post description",
  "excerpt": "This is a post excerpt, used for testing with Cypress. We'll grab the text by searching for it on the DOM. This should be the final sentence…",
  "pathName": "/lorem-ipsum",
  "relatedPosts": Array [
    Object {
      "category": "technology",
      "coverImageAlt": "CoverImageAlt",
      "coverImageUrl": "5.jpg",
      "coverImg": Object {
        "backgroundColor": "transparent",
        "height": 369,
        "images": Object {
          "fallback": Object {
            "sizes": "(min-width: 253px) 253px, 100vw",
            "src": "/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg",
            "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/714de/kali-15.jpg 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/67156/kali-15.jpg 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/81b7c/kali-15.jpg 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/2be7d/kali-15.jpg 506w",
          },
          "sources": Array [
            Object {
              "sizes": "(min-width: 253px) 253px, 100vw",
              "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/a74e4/kali-15.avif 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/8e2c5/kali-15.avif 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/f0967/kali-15.avif 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5aef2/kali-15.avif 506w",
              "type": "image/avif",
            },
            Object {
              "sizes": "(min-width: 253px) 253px, 100vw",
              "srcSet": "/static/14130c6514447b1b4119fa9d43d12bdb/66664/kali-15.webp 63w,
/static/14130c6514447b1b4119fa9d43d12bdb/2139e/kali-15.webp 127w,
/static/14130c6514447b1b4119fa9d43d12bdb/529a1/kali-15.webp 253w,
/static/14130c6514447b1b4119fa9d43d12bdb/5b7a8/kali-15.webp 506w",
              "type": "image/webp",
            },
          ],
        },
        "layout": "constrained",
        "placeholder": Object {
          "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAdABQDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAMEAgX/xAAXAQADAQAAAAAAAAAAAAAAAAABAgME/9oADAMBAAIQAxAAAAFFSnCiDQuqS7mupCUpA3//xAAcEAEAAgMAAwAAAAAAAAAAAAABAAIDEBESISL/2gAIAQEAAQUCpjbRxDPo1f1Lh5YLMupVsurdZzh//8QAHBEAAgEFAQAAAAAAAAAAAAAAAAECERITIVFh/9oACAEDAQE/AZTpIT9Meyx9P//EABkRAAMAAwAAAAAAAAAAAAAAAAABEQISQf/aAAgBAgEBPwFYtqlNuFP/xAAfEAACAQQCAwAAAAAAAAAAAAAAARECISIyEDFRYXH/2gAIAQEABj8Cl2XgxxNRJKfhKog2SOz0XJL1cf/EABsQAQADAQEBAQAAAAAAAAAAAAEAESExQVFx/9oACAEBAAE/IW+FBN68lYNk9IDvH5i4EiaPfPyIso+MfvQ5cEHLXVx23sDaNMGSOQoT/9oADAMBAAIAAwAAABCX/n3/xAAYEQEBAQEBAAAAAAAAAAAAAAABEQAhsf/aAAgBAwEBPxB43JDFpvbhi+N//8QAFxEAAwEAAAAAAAAAAAAAAAAAAAERUf/aAAgBAgEBPxCAMQUKCcP/xAAcEAEAAwEAAwEAAAAAAAAAAAABABEhMVFhoUH/2gAIAQEAAT8Qau/gJb5vxL54GONcuAL+RoR+y45i+geJQIyylhej1ePcjJUPZEQUOFPK0+xv0NmqtZzmzXw45E3uWQTHBGgghOJf2f/Z",
        },
        "width": 253,
      },
      "dateModified": 2021-01-09T00:00:00.000Z,
      "datePublished": 2021-01-06T00:00:00.000Z,
      "description": "this is a post description",
      "excerpt": "This is a post excerpt, used for testing with Cypress. We'll grab the text by searching for it on the DOM. This should be the final sentence…",
      "pathName": "/lorem-ipsum",
      "relatedPosts": undefined,
      "route": "/lorem-ipsum",
      "slug": "/lorem-ipsum",
      "tags": Array [
        "programming",
        "javascript",
      ],
      "timeToRead": 3,
      "title": "Lorem Ipsum",
      "url": "https://zito.fyi/lorem-ipsum",
    },
  ],
  "route": "/lorem-ipsum",
  "slug": "/lorem-ipsum",
  "tags": Array [
    "programming",
    "javascript",
  ],
  "timeToRead": 3,
  "title": "Lorem Ipsum",
  "url": "https://zito.fyi/lorem-ipsum",
}
`;

exports[`\`mdxNodeToPost\` generates correct post data 1`] = `
Object {
  "body": "var _excluded = [\\"components\\"];

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

function _objectWithoutProperties(source, excluded) { if (source == null) return {}; var target = _objectWithoutPropertiesLoose(source, excluded); var key, i; if (Object.getOwnPropertySymbols) { var sourceSymbolKeys = Object.getOwnPropertySymbols(source); for (i = 0; i < sourceSymbolKeys.length; i++) { key = sourceSymbolKeys[i]; if (excluded.indexOf(key) >= 0) continue; if (!Object.prototype.propertyIsEnumerable.call(source, key)) continue; target[key] = source[key]; } } return target; }

function _objectWithoutPropertiesLoose(source, excluded) { if (source == null) return {}; var target = {}; var sourceKeys = Object.keys(source); var key, i; for (i = 0; i < sourceKeys.length; i++) { key = sourceKeys[i]; if (excluded.indexOf(key) >= 0) continue; target[key] = source[key]; } return target; }

/* @jsxRuntime classic */

/* @jsx mdx */
var _frontmatter = {
  \\"title\\": \\"Bold Mage\\",
  \\"cover\\": \\"images/cover_1.jpeg\\",
  \\"coverAlt\\": \\"An image tagged as nature and water.\\",
  \\"description\\": \\"Description\\",
  \\"datePublished\\": \\"2017-01-01\\",
  \\"dateModified\\": \\"2017-01-01\\",
  \\"category\\": \\"tech\\",
  \\"tags\\": [\\"programming\\", \\"stuff\\", \\"other\\"]
};
var layoutProps = {
  _frontmatter: _frontmatter
};
var MDXLayout = \\"wrapper\\";
return function MDXContent(_ref) {
  var components = _ref.components,
      props = _objectWithoutProperties(_ref, _excluded);

  return mdx(MDXLayout, _extends({}, layoutProps, props, {
    components: components,
    mdxType: \\"MDXLayout\\"
  }), mdx(\\"h2\\", null, \\"Sedisti civiliter\\"), mdx(\\"p\\", null, \\"Lorem \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"markdownum\\"), \\" Ixione palus \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"semper peritura barbaque\\"), \\" in aureus\\\\nobliquum erigitur gemmae utque cur natus, aera supplice de nudae. Manus\\\\nambrosiam tendens, saecula tenet, conponere et ense et cucurri. Tantique\\\\nanimalia praeceps Meleagre greges venisse corpore et ignara, umquam ipse? Quam\\\\n\\", mdx(\\"em\\", {
    parentName: \\"p\\"
  }, \\"Talibus ausis\\"), \\".\\"), mdx(\\"h2\\", null, \\"Vultusque subsequitur Pallas regis datis inde animaque\\"), mdx(\\"p\\", null, \\"At securim cautum capitis, creatos sanguinis turbant iam concita videor, edere.\\\\nAlis genas rudis felix quas \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"longum\\"), \\" suorum manu ante prima \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"usque\\"), \\". Nec pro\\\\nmea pariter, ictus iam consequitur capillos elegit ego; quoniam \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"fuit\\"), \\". Aether\\\\nPeleus Aeneadae audacia cruentatis turbae Procrin dirum bacae, accede.\\"), mdx(\\"div\\", {
    \\"className\\": \\"gatsby-highlight\\",
    \\"data-language\\": \\"php\\"
  }, mdx(\\"pre\\", {
    parentName: \\"div\\",
    \\"style\\": {
      \\"counterReset\\": \\"linenumber NaN\\"
    },
    \\"className\\": \\"language-php line-numbers\\"
  }, mdx(\\"code\\", {
    parentName: \\"pre\\",
    \\"className\\": \\"language-php\\"
  }, \\"    urlLinkedin\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\".\\"), \\"midi_manet \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-=\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"namespace\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"backsideKilobitBezel\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"var\\"), \\" ddr \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" storage_wordart_sdram\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    python\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\".\\"), \\"raw_backlink \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" rfid_load \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"4\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    kibibyte \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"*=\\"), \\" cdnThumbnailUri\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\")), mdx(\\"span\\", {
    parentName: \\"pre\\",
    \\"aria-hidden\\": \\"true\\",
    \\"className\\": \\"line-numbers-rows\\",
    \\"style\\": {
      \\"whiteSpace\\": \\"normal\\",
      \\"width\\": \\"auto\\",
      \\"left\\": \\"0\\"
    }
  }, mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  })))), mdx(\\"h2\\", null, \\"Fortis dextrae humo limina Tempus singultibus illa\\"), mdx(\\"p\\", null, \\"Nate muros orbe \\", mdx(\\"a\\", {
    parentName: \\"p\\",
    \\"href\\": \\"http://debebuntilla.org/res-ego\\"
  }, \\"patris\\"), \\" rigent, nec tumida,\\\\npigra iuste At spretarumque latus et nostrum. Passa videtur: inde aut de\\\\nsociorum: pars est, qualesque spes factum terris. Custodia sum animumque; iubet\\\\nin pulvere carus, relinquunt incitat. Aliis quo tribus, vertice cesserunt\\\\nvulneribus nostrae mollire erant ferrum habet loquiturque precibus expersque\\\\nquam etiamnunc. Puraque \\", mdx(\\"a\\", {
    parentName: \\"p\\",
    \\"href\\": \\"http://mihi-aiax.io/suaferunt.aspx\\"
  }, \\"repetitque\\"), \\",\\\\nfunestaque crebros mihi conubia matres insopitumque residunt rogat ponto canos\\\\nergo firmat albentia verba casuque.\\"), mdx(\\"div\\", {
    \\"className\\": \\"gatsby-highlight\\",
    \\"data-language\\": \\"perl\\"
  }, mdx(\\"pre\\", {
    parentName: \\"div\\",
    \\"style\\": {
      \\"counterReset\\": \\"linenumber NaN\\"
    },
    \\"className\\": \\"language-perl line-numbers\\"
  }, mdx(\\"code\\", {
    parentName: \\"pre\\",
    \\"className\\": \\"language-perl\\"
  }, \\"    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"if\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"lion_vdu \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" vrml_upnp \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), \\" redundancyAccessPharming\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"{\\"), \\"\\\\n        driveProcessor \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" floatingWord\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"commerceDockRestore\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"database\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"}\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"else\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"{\\"), \\"\\\\n        partition_source_thunderbolt \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"2\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" tokenStateArchive \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"/\\"), \\"\\\\n                teraflops_gigahertz\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"}\\"), \\"\\\\n    exabytePhpMacintosh \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-=\\"), \\" graphic_cycle\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"expression\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" memory\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"ideFatMatrix\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\"\\\\n            controlInboxMode\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"50\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"3\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    buffer_apple_hdmi \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+=\\"), \\" viralSync \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" internetDigital \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"/\\"), \\" tweak_perl_expansion\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"\\\\n            masterNullFloating \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" vdu\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" software_play\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\")), mdx(\\"span\\", {
    parentName: \\"pre\\",
    \\"aria-hidden\\": \\"true\\",
    \\"className\\": \\"line-numbers-rows\\",
    \\"style\\": {
      \\"whiteSpace\\": \\"normal\\",
      \\"width\\": \\"auto\\",
      \\"left\\": \\"0\\"
    }
  }, mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  })))), mdx(\\"h2\\", null, \\"Nati expugnacior nympha milia nascuntur amico\\"), mdx(\\"p\\", null, \\"Multis timidus hic si auctor hausit. Suos taedasque, malis est nitente sceleri\\\\nsunt florem.\\"), mdx(\\"p\\", null, \\"Sub quid deprenderat mores postquam tectoque maiestatemque debebat quibus;\\\\nsubitam amittere illius esse dona. Quamvis patris virtutem, partem una per\\\\niuvenaliter, stupet, sed nullae sepulto moderato? Nec phaedimus aequoris dixit.\\\\nHic bis parenti: e petunt satis.\\"));
}
;
MDXContent.isMDXComponent = true;",
  "category": "tech",
  "coverImageAlt": "An image tagged as nature and water.",
  "coverImageUrl": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/cover_1.jpeg",
  "coverImg": Object {
    "backgroundColor": "transparent",
    "height": 1000,
    "images": Object {
      "fallback": Object {
        "sizes": "(min-width: 2500px) 2500px, 100vw",
        "src": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/ee7c2/cover_1.jpg",
        "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/74341/cover_1.jpg 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/c98fe/cover_1.jpg 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/ee7c2/cover_1.jpg 2500w",
      },
      "sources": Array [
        Object {
          "sizes": "(min-width: 2500px) 2500px, 100vw",
          "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/44552/cover_1.avif 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/fdd2c/cover_1.avif 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/d8633/cover_1.avif 2500w",
          "type": "image/avif",
        },
        Object {
          "sizes": "(min-width: 2500px) 2500px, 100vw",
          "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/a07b5/cover_1.webp 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/f1147/cover_1.webp 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/0676d/cover_1.webp 2500w",
          "type": "image/webp",
        },
      ],
    },
    "layout": "constrained",
    "placeholder": Object {
      "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAIABQDASIAAhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAAAAMF/8QAFQEBAQAAAAAAAAAAAAAAAAAAAQD/2gAMAwEAAhADEAAAAdGYUwP/xAAXEAEBAQEAAAAAAAAAAAAAAAAAEQIT/9oACAEBAAEFAqjrp//EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/ASf/xAAUEQEAAAAAAAAAAAAAAAAAAAAQ/9oACAECAQE/AT//xAAaEAACAgMAAAAAAAAAAAAAAAAAAQIRInHh/9oACAEBAAY/AqR0xg62f//EABkQAAIDAQAAAAAAAAAAAAAAAAERACFBgf/aAAgBAQABPyFEhrNlmSSyKigdBJ//2gAMAwEAAgADAAAAEPf/AP/EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/EAE//8QAFhEBAQEAAAAAAAAAAAAAAAAAARAR/9oACAECAQE/EF2f/8QAGhABAAIDAQAAAAAAAAAAAAAAAQARITFBkf/aAAgBAQABPxCtWQ3cIhEGOxxx4GpTYkWILyf/2Q==",
    },
    "width": 2500,
  },
  "dateModified": 2017-01-01T00:00:00.000Z,
  "datePublished": 2017-01-01T00:00:00.000Z,
  "description": "Description",
  "excerpt": "Sedisti civiliter Lorem  markdownum  Ixione palus  semper peritura barbaque  in aureus
obliquum erigitur gemmae utque cur natus, aera…",
  "internalContent": "---
title: \\"Bold Mage\\"
cover: images/cover_1.jpeg
coverAlt: \\"An image tagged as nature and water.\\"
description: \\"Description\\"
datePublished: \\"2017-01-01\\"
dateModified: \\"2017-01-01\\"
category: \\"tech\\"
tags:
  - programming
  - stuff
  - other
---

## Sedisti civiliter

Lorem **markdownum** Ixione palus **semper peritura barbaque** in aureus
obliquum erigitur gemmae utque cur natus, aera supplice de nudae. Manus
ambrosiam tendens, saecula tenet, conponere et ense et cucurri. Tantique
animalia praeceps Meleagre greges venisse corpore et ignara, umquam ipse? Quam
_Talibus ausis_.

## Vultusque subsequitur Pallas regis datis inde animaque

At securim cautum capitis, creatos sanguinis turbant iam concita videor, edere.
Alis genas rudis felix quas **longum** suorum manu ante prima **usque**. Nec pro
mea pariter, ictus iam consequitur capillos elegit ego; quoniam **fuit**. Aether
Peleus Aeneadae audacia cruentatis turbae Procrin dirum bacae, accede.

\`\`\`php
    urlLinkedin.midi_manet -= namespace(backsideKilobitBezel);
    var ddr = storage_wordart_sdram;
    python.raw_backlink = rfid_load - 4;
    kibibyte *= cdnThumbnailUri;
\`\`\`

## Fortis dextrae humo limina Tempus singultibus illa

Nate muros orbe [patris](http://debebuntilla.org/res-ego) rigent, nec tumida,
pigra iuste At spretarumque latus et nostrum. Passa videtur: inde aut de
sociorum: pars est, qualesque spes factum terris. Custodia sum animumque; iubet
in pulvere carus, relinquunt incitat. Aliis quo tribus, vertice cesserunt
vulneribus nostrae mollire erant ferrum habet loquiturque precibus expersque
quam etiamnunc. Puraque [repetitque](http://mihi-aiax.io/suaferunt.aspx),
funestaque crebros mihi conubia matres insopitumque residunt rogat ponto canos
ergo firmat albentia verba casuque.

\`\`\`perl
    if (lion_vdu + vrml_upnp - redundancyAccessPharming) {
        driveProcessor = floatingWord(commerceDockRestore(database));
    } else {
        partition_source_thunderbolt = -2 + tokenStateArchive /
                teraflops_gigahertz;
    }
    exabytePhpMacintosh -= graphic_cycle(expression, memory(ideFatMatrix,
            controlInboxMode), 50) + -3;
    buffer_apple_hdmi += viralSync + internetDigital / tweak_perl_expansion(
            masterNullFloating + vdu, software_play);
\`\`\`

## Nati expugnacior nympha milia nascuntur amico

Multis timidus hic si auctor hausit. Suos taedasque, malis est nitente sceleri
sunt florem.

Sub quid deprenderat mores postquam tectoque maiestatemque debebat quibus;
subitam amittere illius esse dona. Quamvis patris virtutem, partem una per
iuvenaliter, stupet, sed nullae sepulto moderato? Nec phaedimus aequoris dixit.
Hic bis parenti: e petunt satis.
",
  "pathName": "/bold-mage",
  "route": "/bold-mage",
  "slug": "/bold-mage",
  "tags": Array [
    "programming",
    "stuff",
    "other",
  ],
  "timeToRead": 1,
  "title": "Bold Mage",
  "url": "https://zito.fyi/bold-mage",
}
`;

exports[`\`queryToPost\` generates correct post data 1`] = `
Object {
  "body": "var _excluded = [\\"components\\"];

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

function _objectWithoutProperties(source, excluded) { if (source == null) return {}; var target = _objectWithoutPropertiesLoose(source, excluded); var key, i; if (Object.getOwnPropertySymbols) { var sourceSymbolKeys = Object.getOwnPropertySymbols(source); for (i = 0; i < sourceSymbolKeys.length; i++) { key = sourceSymbolKeys[i]; if (excluded.indexOf(key) >= 0) continue; if (!Object.prototype.propertyIsEnumerable.call(source, key)) continue; target[key] = source[key]; } } return target; }

function _objectWithoutPropertiesLoose(source, excluded) { if (source == null) return {}; var target = {}; var sourceKeys = Object.keys(source); var key, i; for (i = 0; i < sourceKeys.length; i++) { key = sourceKeys[i]; if (excluded.indexOf(key) >= 0) continue; target[key] = source[key]; } return target; }

/* @jsxRuntime classic */

/* @jsx mdx */
var _frontmatter = {
  \\"title\\": \\"Bold Mage\\",
  \\"cover\\": \\"images/cover_1.jpeg\\",
  \\"coverAlt\\": \\"An image tagged as nature and water.\\",
  \\"description\\": \\"Description\\",
  \\"datePublished\\": \\"2017-01-01\\",
  \\"dateModified\\": \\"2017-01-01\\",
  \\"category\\": \\"tech\\",
  \\"tags\\": [\\"programming\\", \\"stuff\\", \\"other\\"]
};
var layoutProps = {
  _frontmatter: _frontmatter
};
var MDXLayout = \\"wrapper\\";
return function MDXContent(_ref) {
  var components = _ref.components,
      props = _objectWithoutProperties(_ref, _excluded);

  return mdx(MDXLayout, _extends({}, layoutProps, props, {
    components: components,
    mdxType: \\"MDXLayout\\"
  }), mdx(\\"h2\\", null, \\"Sedisti civiliter\\"), mdx(\\"p\\", null, \\"Lorem \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"markdownum\\"), \\" Ixione palus \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"semper peritura barbaque\\"), \\" in aureus\\\\nobliquum erigitur gemmae utque cur natus, aera supplice de nudae. Manus\\\\nambrosiam tendens, saecula tenet, conponere et ense et cucurri. Tantique\\\\nanimalia praeceps Meleagre greges venisse corpore et ignara, umquam ipse? Quam\\\\n\\", mdx(\\"em\\", {
    parentName: \\"p\\"
  }, \\"Talibus ausis\\"), \\".\\"), mdx(\\"h2\\", null, \\"Vultusque subsequitur Pallas regis datis inde animaque\\"), mdx(\\"p\\", null, \\"At securim cautum capitis, creatos sanguinis turbant iam concita videor, edere.\\\\nAlis genas rudis felix quas \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"longum\\"), \\" suorum manu ante prima \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"usque\\"), \\". Nec pro\\\\nmea pariter, ictus iam consequitur capillos elegit ego; quoniam \\", mdx(\\"strong\\", {
    parentName: \\"p\\"
  }, \\"fuit\\"), \\". Aether\\\\nPeleus Aeneadae audacia cruentatis turbae Procrin dirum bacae, accede.\\"), mdx(\\"div\\", {
    \\"className\\": \\"gatsby-highlight\\",
    \\"data-language\\": \\"php\\"
  }, mdx(\\"pre\\", {
    parentName: \\"div\\",
    \\"style\\": {
      \\"counterReset\\": \\"linenumber NaN\\"
    },
    \\"className\\": \\"language-php line-numbers\\"
  }, mdx(\\"code\\", {
    parentName: \\"pre\\",
    \\"className\\": \\"language-php\\"
  }, \\"    urlLinkedin\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\".\\"), \\"midi_manet \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-=\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"namespace\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"backsideKilobitBezel\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"var\\"), \\" ddr \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" storage_wordart_sdram\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    python\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\".\\"), \\"raw_backlink \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" rfid_load \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"4\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    kibibyte \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"*=\\"), \\" cdnThumbnailUri\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\")), mdx(\\"span\\", {
    parentName: \\"pre\\",
    \\"aria-hidden\\": \\"true\\",
    \\"className\\": \\"line-numbers-rows\\",
    \\"style\\": {
      \\"whiteSpace\\": \\"normal\\",
      \\"width\\": \\"auto\\",
      \\"left\\": \\"0\\"
    }
  }, mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  })))), mdx(\\"h2\\", null, \\"Fortis dextrae humo limina Tempus singultibus illa\\"), mdx(\\"p\\", null, \\"Nate muros orbe \\", mdx(\\"a\\", {
    parentName: \\"p\\",
    \\"href\\": \\"http://debebuntilla.org/res-ego\\"
  }, \\"patris\\"), \\" rigent, nec tumida,\\\\npigra iuste At spretarumque latus et nostrum. Passa videtur: inde aut de\\\\nsociorum: pars est, qualesque spes factum terris. Custodia sum animumque; iubet\\\\nin pulvere carus, relinquunt incitat. Aliis quo tribus, vertice cesserunt\\\\nvulneribus nostrae mollire erant ferrum habet loquiturque precibus expersque\\\\nquam etiamnunc. Puraque \\", mdx(\\"a\\", {
    parentName: \\"p\\",
    \\"href\\": \\"http://mihi-aiax.io/suaferunt.aspx\\"
  }, \\"repetitque\\"), \\",\\\\nfunestaque crebros mihi conubia matres insopitumque residunt rogat ponto canos\\\\nergo firmat albentia verba casuque.\\"), mdx(\\"div\\", {
    \\"className\\": \\"gatsby-highlight\\",
    \\"data-language\\": \\"perl\\"
  }, mdx(\\"pre\\", {
    parentName: \\"div\\",
    \\"style\\": {
      \\"counterReset\\": \\"linenumber NaN\\"
    },
    \\"className\\": \\"language-perl line-numbers\\"
  }, mdx(\\"code\\", {
    parentName: \\"pre\\",
    \\"className\\": \\"language-perl\\"
  }, \\"    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"if\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"lion_vdu \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" vrml_upnp \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), \\" redundancyAccessPharming\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"{\\"), \\"\\\\n        driveProcessor \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" floatingWord\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"commerceDockRestore\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"database\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"}\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token keyword\\"
  }, \\"else\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"{\\"), \\"\\\\n        partition_source_thunderbolt \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"=\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"2\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" tokenStateArchive \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"/\\"), \\"\\\\n                teraflops_gigahertz\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"}\\"), \\"\\\\n    exabytePhpMacintosh \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-=\\"), \\" graphic_cycle\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"expression\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" memory\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"ideFatMatrix\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\"\\\\n            controlInboxMode\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"50\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"-\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token number\\"
  }, \\"3\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\"), \\"\\\\n    buffer_apple_hdmi \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+=\\"), \\" viralSync \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" internetDigital \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"/\\"), \\" tweak_perl_expansion\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\"(\\"), \\"\\\\n            masterNullFloating \\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token operator\\"
  }, \\"+\\"), \\" vdu\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\",\\"), \\" software_play\\", mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\")\\"), mdx(\\"span\\", {
    parentName: \\"code\\",
    \\"className\\": \\"token punctuation\\"
  }, \\";\\")), mdx(\\"span\\", {
    parentName: \\"pre\\",
    \\"aria-hidden\\": \\"true\\",
    \\"className\\": \\"line-numbers-rows\\",
    \\"style\\": {
      \\"whiteSpace\\": \\"normal\\",
      \\"width\\": \\"auto\\",
      \\"left\\": \\"0\\"
    }
  }, mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  }), mdx(\\"span\\", {
    parentName: \\"span\\"
  })))), mdx(\\"h2\\", null, \\"Nati expugnacior nympha milia nascuntur amico\\"), mdx(\\"p\\", null, \\"Multis timidus hic si auctor hausit. Suos taedasque, malis est nitente sceleri\\\\nsunt florem.\\"), mdx(\\"p\\", null, \\"Sub quid deprenderat mores postquam tectoque maiestatemque debebat quibus;\\\\nsubitam amittere illius esse dona. Quamvis patris virtutem, partem una per\\\\niuvenaliter, stupet, sed nullae sepulto moderato? Nec phaedimus aequoris dixit.\\\\nHic bis parenti: e petunt satis.\\"));
}
;
MDXContent.isMDXComponent = true;",
  "category": "tech",
  "coverImageAlt": "An image tagged as nature and water.",
  "coverImageUrl": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/cover_1.jpeg",
  "coverImg": Object {
    "backgroundColor": "transparent",
    "height": 1000,
    "images": Object {
      "fallback": Object {
        "sizes": "(min-width: 2500px) 2500px, 100vw",
        "src": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/ee7c2/cover_1.jpg",
        "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/74341/cover_1.jpg 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/c98fe/cover_1.jpg 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/ee7c2/cover_1.jpg 2500w",
      },
      "sources": Array [
        Object {
          "sizes": "(min-width: 2500px) 2500px, 100vw",
          "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/44552/cover_1.avif 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/fdd2c/cover_1.avif 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/d8633/cover_1.avif 2500w",
          "type": "image/avif",
        },
        Object {
          "sizes": "(min-width: 2500px) 2500px, 100vw",
          "srcSet": "/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/a07b5/cover_1.webp 625w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/f1147/cover_1.webp 1250w,
/static/2b1ae0ceb13d2648e4bbd3fe92ae34f4/0676d/cover_1.webp 2500w",
          "type": "image/webp",
        },
      ],
    },
    "layout": "constrained",
    "placeholder": Object {
      "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAIABQDASIAAhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAAAAMF/8QAFQEBAQAAAAAAAAAAAAAAAAAAAQD/2gAMAwEAAhADEAAAAdGYUwP/xAAXEAEBAQEAAAAAAAAAAAAAAAAAEQIT/9oACAEBAAEFAqjrp//EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/ASf/xAAUEQEAAAAAAAAAAAAAAAAAAAAQ/9oACAECAQE/AT//xAAaEAACAgMAAAAAAAAAAAAAAAAAAQIRInHh/9oACAEBAAY/AqR0xg62f//EABkQAAIDAQAAAAAAAAAAAAAAAAERACFBgf/aAAgBAQABPyFEhrNlmSSyKigdBJ//2gAMAwEAAgADAAAAEPf/AP/EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/EAE//8QAFhEBAQEAAAAAAAAAAAAAAAAAARAR/9oACAECAQE/EF2f/8QAGhABAAIDAQAAAAAAAAAAAAAAAQARITFBkf/aAAgBAQABPxCtWQ3cIhEGOxxx4GpTYkWILyf/2Q==",
    },
    "width": 2500,
  },
  "dateModified": 2017-01-01T00:00:00.000Z,
  "datePublished": 2017-01-01T00:00:00.000Z,
  "description": "Description",
  "excerpt": "Sedisti civiliter Lorem  markdownum  Ixione palus  semper peritura barbaque  in aureus
obliquum erigitur gemmae utque cur natus, aera…",
  "internalContent": "---
title: \\"Bold Mage\\"
cover: images/cover_1.jpeg
coverAlt: \\"An image tagged as nature and water.\\"
description: \\"Description\\"
datePublished: \\"2017-01-01\\"
dateModified: \\"2017-01-01\\"
category: \\"tech\\"
tags:
  - programming
  - stuff
  - other
---

## Sedisti civiliter

Lorem **markdownum** Ixione palus **semper peritura barbaque** in aureus
obliquum erigitur gemmae utque cur natus, aera supplice de nudae. Manus
ambrosiam tendens, saecula tenet, conponere et ense et cucurri. Tantique
animalia praeceps Meleagre greges venisse corpore et ignara, umquam ipse? Quam
_Talibus ausis_.

## Vultusque subsequitur Pallas regis datis inde animaque

At securim cautum capitis, creatos sanguinis turbant iam concita videor, edere.
Alis genas rudis felix quas **longum** suorum manu ante prima **usque**. Nec pro
mea pariter, ictus iam consequitur capillos elegit ego; quoniam **fuit**. Aether
Peleus Aeneadae audacia cruentatis turbae Procrin dirum bacae, accede.

\`\`\`php
    urlLinkedin.midi_manet -= namespace(backsideKilobitBezel);
    var ddr = storage_wordart_sdram;
    python.raw_backlink = rfid_load - 4;
    kibibyte *= cdnThumbnailUri;
\`\`\`

## Fortis dextrae humo limina Tempus singultibus illa

Nate muros orbe [patris](http://debebuntilla.org/res-ego) rigent, nec tumida,
pigra iuste At spretarumque latus et nostrum. Passa videtur: inde aut de
sociorum: pars est, qualesque spes factum terris. Custodia sum animumque; iubet
in pulvere carus, relinquunt incitat. Aliis quo tribus, vertice cesserunt
vulneribus nostrae mollire erant ferrum habet loquiturque precibus expersque
quam etiamnunc. Puraque [repetitque](http://mihi-aiax.io/suaferunt.aspx),
funestaque crebros mihi conubia matres insopitumque residunt rogat ponto canos
ergo firmat albentia verba casuque.

\`\`\`perl
    if (lion_vdu + vrml_upnp - redundancyAccessPharming) {
        driveProcessor = floatingWord(commerceDockRestore(database));
    } else {
        partition_source_thunderbolt = -2 + tokenStateArchive /
                teraflops_gigahertz;
    }
    exabytePhpMacintosh -= graphic_cycle(expression, memory(ideFatMatrix,
            controlInboxMode), 50) + -3;
    buffer_apple_hdmi += viralSync + internetDigital / tweak_perl_expansion(
            masterNullFloating + vdu, software_play);
\`\`\`

## Nati expugnacior nympha milia nascuntur amico

Multis timidus hic si auctor hausit. Suos taedasque, malis est nitente sceleri
sunt florem.

Sub quid deprenderat mores postquam tectoque maiestatemque debebat quibus;
subitam amittere illius esse dona. Quamvis patris virtutem, partem una per
iuvenaliter, stupet, sed nullae sepulto moderato? Nec phaedimus aequoris dixit.
Hic bis parenti: e petunt satis.
",
  "pathName": "/bold-mage",
  "route": "/bold-mage",
  "slug": "/bold-mage",
  "tags": Array [
    "programming",
    "stuff",
    "other",
  ],
  "timeToRead": 1,
  "title": "Bold Mage",
  "url": "https://zito.fyi/bold-mage",
}
`;

exports[`\`queryToPostsList\` generates correct posts list 1`] = `
Array [
  Object {
    "body": undefined,
    "category": "technology",
    "coverImageAlt": "An image.",
    "coverImageUrl": undefined,
    "coverImg": Object {
      "backgroundColor": "transparent",
      "height": 368,
      "images": Object {
        "fallback": Object {
          "sizes": "(min-width: 920px) 920px, 100vw",
          "src": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df323/de.jpg",
          "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/2fb23/de.jpg 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/1fc23/de.jpg 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df323/de.jpg 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/3f823/de.jpg 1840w",
        },
        "sources": Array [
          Object {
            "sizes": "(min-width: 920px) 920px, 100vw",
            "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/ef223/de.avif 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/5f723/de.avif 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/9f123/de.avif 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/bfe23/de.avif 1840w",
            "type": "image/avif",
          },
          Object {
            "sizes": "(min-width: 920px) 920px, 100vw",
            "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/1f623/de.webp 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/ffb23/de.webp 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df423/de.webp 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/3f223/de.webp 1840w",
            "type": "image/webp",
          },
        ],
      },
      "layout": "constrained",
      "placeholder": Object {
        "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAIABQDASIAAhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAAAAMF/8QAFQEBAQAAAAAAAAAAAAAAAAAAAQD/2gAMAwEAAhADEAAAAdGYUwP/xAAXEAEBAQEAAAAAAAAAAAAAAAAAEQIT/9oACAEBAAEFAqjrp//EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/ASf/xAAUEQEAAAAAAAAAAAAAAAAAAAAQ/9oACAECAQE/AT//xAAaEAACAgMAAAAAAAAAAAAAAAAAAQIRInHh/9oACAEBAAY/AqR0xg62f//EABkQAAIDAQAAAAAAAAAAAAAAAAERACFBgf/aAAgBAQABPyFEhrNlmSSyKigdBJ//2gAMAwEAAgADAAAAEPf/AP/EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/EAE//8QAFhEBAQEAAAAAAAAAAAAAAAAAARAR/9oACAECAQE/EF2f/8QAGhABAAIDAQAAAAAAAAAAAAAAAQARITFBkf/aAAgBAQABPxCtWQ3cIhEGOxxx4GpTYkWILyf/2Q==",
      },
      "width": 920,
    },
    "dateModified": 2020-04-11T00:00:00.000Z,
    "datePublished": 2020-04-11T00:00:00.000Z,
    "description": "Description",
    "excerpt": "Sedisti civiliter Lorem  markdownum  Ixione palus  semper peritura barbaque  in aureus
obliquum erigitur gemmae utque cur natus, aera…",
    "internalContent": undefined,
    "pathName": "/test-one",
    "route": "/test-one",
    "slug": "/test-one",
    "tags": Array [
      "programming",
      "cate",
      "ee",
    ],
    "timeToRead": 1,
    "title": "Test One",
    "url": "https://zito.fyi/test-one",
  },
  Object {
    "body": undefined,
    "category": "technology",
    "coverImageAlt": "An image",
    "coverImageUrl": undefined,
    "coverImg": Object {
      "backgroundColor": "transparent",
      "height": 368,
      "images": Object {
        "fallback": Object {
          "sizes": "(min-width: 920px) 920px, 100vw",
          "src": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df323/de.jpg",
          "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/2fb23/de.jpg 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/1fc23/de.jpg 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df323/de.jpg 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/3f823/de.jpg 1840w",
        },
        "sources": Array [
          Object {
            "sizes": "(min-width: 920px) 920px, 100vw",
            "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/ef223/de.avif 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/5f723/de.avif 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/9f123/de.avif 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/bfe23/de.avif 1840w",
            "type": "image/avif",
          },
          Object {
            "sizes": "(min-width: 920px) 920px, 100vw",
            "srcSet": "/static/351fe0crb13d2648e4bbd3fe9tae3gf4/1f623/de.webp 230w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/ffb23/de.webp 460w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/df423/de.webp 920w,
/static/351fe0crb13d2648e4bbd3fe9tae3gf4/3f223/de.webp 1840w",
            "type": "image/webp",
          },
        ],
      },
      "layout": "constrained",
      "placeholder": Object {
        "fallback": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAIABQDASIAAhEBAxEB/8QAFgABAQEAAAAAAAAAAAAAAAAAAAMF/8QAFQEBAQAAAAAAAAAAAAAAAAAAAQD/2gAMAwEAAhADEAAAAdGYUwP/xAAXEAEBAQEAAAAAAAAAAAAAAAAAEQIT/9oACAEBAAEFAqjrp//EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/ASf/xAAUEQEAAAAAAAAAAAAAAAAAAAAQ/9oACAECAQE/AT//xAAaEAACAgMAAAAAAAAAAAAAAAAAAQIRInHh/9oACAEBAAY/AqR0xg62f//EABkQAAIDAQAAAAAAAAAAAAAAAAERACFBgf/aAAgBAQABPyFEhrNlmSSyKigdBJ//2gAMAwEAAgADAAAAEPf/AP/EABURAQEAAAAAAAAAAAAAAAAAAAEQ/9oACAEDAQE/EAE//8QAFhEBAQEAAAAAAAAAAAAAAAAAARAR/9oACAECAQE/EF2f/8QAGhABAAIDAQAAAAAAAAAAAAAAAQARITFBkf/aAAgBAQABPxCtWQ3cIhEGOxxx4GpTYkWILyf/2Q==",
      },
      "width": 920,
    },
    "dateModified": 2020-04-11T00:00:00.000Z,
    "datePublished": 2020-04-11T00:00:00.000Z,
    "description": "Description",
    "excerpt": "Sedisti civiliter Lorem  markdownum  Ixione palus  semper peritura barbaque  in aureus
obliquum erigitur gemmae utque cur natus, aera…",
    "internalContent": undefined,
    "pathName": "/test-ones",
    "route": "/test-ones",
    "slug": "/test-ones",
    "tags": Array [
      "programming",
      "writing",
    ],
    "timeToRead": 1,
    "title": "Test Ones",
    "url": "https://zito.fyi/test-ones",
  },
]
`;
